--- a/desafio-tinnova-back/src/main/resources/application.properties
+++ b/desafio-tinnova-back/src/main/resources/application.properties
@@ -10,10 +10,19 @@ spring.datasource.password=admin123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configurações JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.jpa.defer-datasource-initialization=false
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+# Debug adicional para verificar criação de tabelas
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
 
 # Configurações para produção
 spring.jpa.open-in-view=false
